trip preview text overflow fix

--- a/frontend/src/components/BookingPreviewDetails/BookingPreviewDetails.css
+++ b/frontend/src/components/BookingPreviewDetails/BookingPreviewDetails.css
@@ -1,6 +1,6 @@
 .trip-detail-main {
     border-radius: 15px;
-    width: 500px;
+    width: 600px;
     padding: 30px;
 }
 
