--- a/frontend/src/components/TripsPage/TripPage.css
+++ b/frontend/src/components/TripsPage/TripPage.css
@@ -153,3 +153,7 @@ i.fa-suitcase {
 .explore-new:hover {
      text-decoration: underline;
 }
+
+.trip-detail-upper-info {
+     max-width: 400px;
+}
